tests/Parsing/scope-mismatch.fab
#
# RUN: %fab --format=null --print-dag %s 2> %t || true
# RUN: FileCheck %s -input-file %t
#

# CHECK: {{.*}}:10:{{[0-9]+}}: error: syntax error
foo = function(xs:list[int])
{
	foreach x <= xs:
	{
		x + 1
};

# CHECK-NOT: Assertion failed: (scopes.empty()), function ~Parser
